syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.widedelivery.order.proto";

package order;

import "google/protobuf/timestamp.proto";
import "order.proto";
import "user.proto";

message CreateOrderInput {
  auth.UserDTO user = 1;
  string cargo_type = 2;
  double cargo_length = 3;
  double cargo_width = 4;
  double cargo_height = 5;
  double cargo_weight = 6;
  string departure_longitude = 7;
  string departure_latitude = 8;
  google.protobuf.Timestamp departure_time = 9;
  string destination_longitude = 10;
  string destination_latitude = 11;
  google.protobuf.Timestamp destination_time = 12;
  string description = 13;
  bool need_loader = 14;
  string payment_method = 15;
}

message CreateOrderResponse { Order order = 1; }
