syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.widedelivery.order.proto";
option java_outer_classname = "OrderProto";

package order;

import "rpc_create_order.proto";
import "rpc_get_matched_orders.proto";
import "rpc_add_driver_to_matching.proto";
import "rpc_remove_driver_from_matching.proto";
import "order.proto";

service OrderService {
  rpc CreateOrder(CreateOrderInput) returns (CreateOrderResponse) {}
  rpc GetOrder(GetOrderInput) returns (OrderResponse) {}

  rpc AddDriverForMatching(AddDriverToMatchingInput) returns (GenericResponse) {}
  rpc RemoveDriverFromMatching(RemoveDriverFromMatchingInput) returns (GenericResponse) {}
  rpc GetMatchedOrders(GetMatchedOrdersInput) returns (stream GetMatchedOrdersOutput) {}
}

message GetOrderInput {
  string order_id = 1;
}
